...
          title: '',
          tabBarButton: (props) => {
            const { delayLongPress, disabled, ...rest } = props;
            return (
              <TouchableOpacity
                {...rest as any}
                testID="tab-add"
                delayLongPress={delayLongPress ?? undefined}
                disabled={disabled ?? undefined}
                style={styles.customButtonContainer}
              >
                <LinearGradient
                  colors={[Colors.light.tint, '#4338CA']}
...
