import { UnitInfo } from './food';

export interface ProcessedFoodItem {
  product_id: string | null;
  name: string;
  quantity_grams: number;
  kcal: number;
  protein: number;
  fat: number;
  carbs: number;
  confidence: number;
  unit_matched: string;
  quantity_unit_value: number;
...
